PL/Projecto/tests/good/17.nx
type r = 1..100;

var a : array r of r filled by 10;
