PL/Projecto/tests/bad/14.nx
type index = 10..20;

type i = 1..5;

var a : array index of i filled by 6;
